--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </h1>
                     <div class="flex items-center">
                         <span class="text-sm text-gray-600">
-                            Kementerian Perindustrian RI
+                            Ricardo J. Simarmata
                         </span>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <div class="p-8 md:p-12 text-white">
                         <h2 class="text-3xl md:text-4xl font-bold mb-4">Memajukan Industri Permesinan Indonesia</h2>
                         <p class="text-lg md:text-xl mb-6">
-                            Analisis komprehensif dan rekomendasi kebijakan strategis untuk transformasi industri permesinan Indonesia menuju era Industri 4.0
+                            Analisis dan rekomendasi kebijakan strategis untuk transformasi industri permesinan Indonesia (Website ini menyajikan policy brief berbasis analisis singkat atas isu-isu strategis sektor industri. Tujuannya memberi perspektif alternatif untuk kebijakan yang responsif dan berbasis data. Disclaimer: Konten bersifat opini pribadi dan bukan rujukan ilmiah atau hukum.)
                         </p>
                         <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-4">
                             <a href="ringkasan-eksekutif.html" class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100 transition duration-300">
