--- a/rekomendasi-kebijakan.html
+++ b/rekomendasi-kebijakan.html
@@ -64,7 +64,7 @@
                     </h1>
                     <div class="flex items-center">
                         <span class="text-sm text-gray-600">
-                            Kementerian Perindustrian RI
+                            Ricardo J. Simarmata
                         </span>
                     </div>
                 </div>
@@ -368,7 +368,7 @@
             <!-- Footer -->
             <footer class="bg-gray-100 p-6">
                 <p class="text-center text-gray-600">
-                    © 2025 Kementerian Perindustrian Republik Indonesia - Direktorat Permesinan dan Alat Mesin Pertanian
+                    © 2025 (Unofficial) Kementerian Perindustrian Republik Indonesia - Direktorat Permesinan dan Alat Mesin Pertanian
                 </p>
             </footer>
         </div>
