--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <div class="p-8 md:p-12 text-white">
                         <h2 class="text-3xl md:text-4xl font-bold mb-4">Memajukan Industri Permesinan Indonesia</h2>
                         <p class="text-lg md:text-xl mb-6">
-                            Analisis dan rekomendasi kebijakan strategis untuk transformasi industri permesinan Indonesia (Website ini menyajikan policy brief berbasis analisis singkat atas isu-isu strategis sektor industri. Tujuannya memberi perspektif alternatif untuk kebijakan yang responsif dan berbasis data. Disclaimer: Konten bersifat opini pribadi dan bukan rujukan ilmiah atau hukum.)
+                            Analisis dan rekomendasi kebijakan strategis untuk transformasi industri permesinan Indonesia. 
+                            (Website ini menyajikan policy brief berbasis analisis singkat atas isu-isu strategis sektor industri. Tujuannya memberi perspektif alternatif untuk kebijakan yang responsif dan berbasis data. Disclaimer: Konten bersifat opini pribadi dan bukan rujukan ilmiah atau hukum.)
                         </p>
                         <div class="flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-4">
                             <a href="ringkasan-eksekutif.html" class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100 transition duration-300">
@@ -203,9 +204,9 @@
                 <!-- Call to Action -->
                 <div class="max-w-7xl mx-auto bg-gradient-to-r from-blue-600 to-blue-800 rounded-lg shadow-lg overflow-hidden mb-8">
                     <div class="p-8 text-white">
-                        <h2 class="text-2xl font-bold mb-4">Siap Mengimplementasikan Kebijakan Strategis?</h2>
+                        <h2 class="text-2xl font-bold mb-4">Siap Berkontribusi dalam Kebijakan Strategis?</h2>
                         <p class="text-lg mb-6">
-                            Sebagai Pembina Industri di Direktorat Permesinan dan Alat Mesin Pertanian, Anda memiliki peran strategis dalam mendorong transformasi industri permesinan Indonesia.
+                            Untuk memajukan industri permesinan Indonesia, butuh pertimbangan yang matang dan masukan dari seluruh pemangku kepentingan.
                         </p>
                         <a href="validasi-rekomendasi.html" class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-lg hover:bg-gray-100 transition duration-300">
                             Lihat Validasi Rekomendasi
