--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <div class="flex flex-col md:flex-row justify-between items-center">
                         <div class="mb-4 md:mb-0">
                             <p class="text-gray-600">
-                                © 2025 Kementerian Perindustrian Republik Indonesia
+                                © 2025 (Unofficial) Kementerian Perindustrian Republik Indonesia
                             </p>
                             <p class="text-gray-600 text-sm">
                                 Direktorat Permesinan dan Alat Mesin Pertanian
